Implement next:

    * Design general purpose 'model' or 'transition relation' interface

    pool of relation nodes (like forest):
        * Do we need a global relation registry, like forests?
        * unique ID for each "node"
        * zero ID always means empty relation
        * negative ID always means 'terminal node'

        * relation pool methods:
            virtual relation_node& fetchRelation(unsigned ID, bool outgoing)=0;
            virtual void doneRelation(relation_node& rn)=0;

        * abstract base class for "relation node"
            unsigned rnID;
            unsigned level;

            virtual bool outgoing(unsigned i, relslice &rs);
            virtual bool incoming(unsigned i, relslice &rs);
            // ^
            // return false if there are no outgoing/incoming edges;
            // otherwise return true.
            //
            // fill rs with the outgoing/incoming edges for value i
            // according to relation with given ID.
            // The contents of rs are undefined (likely, unchanged)
            // if the function returns false.
            //

        struct relslice {
            node_handle diagonal;
            edge_value  diag_ev;

            unsigned* index;
            node_handle* down;
            edge_value* values;
            //
            // ^ or use std::vector?
        };




    types of pools:
        * forest, for 'ordinary' MxDs
        * implicit nodes: add/subtract a constant
        * implicit nodes: generic
        * parameterized implicit nodes ?
        * AND: intersection of several IDs
            possibly also with constrained row/column sets
        * special AND for disjoint levels (e.g., a chain?)
        * OR: union of several relations


    relation (like dd_edge):
        * parent pool
        * ID of root
        * top-most non-identity level
        * which levels are non-identity


    operations:
        * allow binary operations between forest and relation


