@@ -27,12 +27,8 @@
 // ******************************************************************
 
 MEDDLY::evmdd_timesreal::evmdd_timesreal(domain *d, const policies &p)
- : evmdd_forest(d, range_type::REAL, edge_labeling::EVTIMES,
-         p)
+ : evmdd_forest(d, range_type::REAL, edge_labeling::EVTIMES, p)
 {
-    setFloatEdges();
-    setTransparentEdge(0, float(0));
-    initializeStorage();
 }
 
 MEDDLY::evmdd_timesreal::~evmdd_timesreal()
