@@ -27,12 +27,8 @@
 // ******************************************************************
 
 MEDDLY::evmxd_pluslong::evmxd_pluslong(domain *d, const policies &p)
- : evmxd_forest(d, range_type::INTEGER, edge_labeling::EVPLUS,
-         p)
+ : evmxd_forest(d, range_type::INTEGER, edge_labeling::EVPLUS, p)
 {
-    setLongEdges();
-    setTransparentEdge(0, long(0));
-    initializeStorage();
 }
 
 MEDDLY::evmxd_pluslong::~evmxd_pluslong()
