@@ -26,7 +26,6 @@ MEDDLY::mtmxd_forest
 ::mtmxd_forest(domain* d, range_type t, const policies &p)
  : mt_forest(d, true, t, p)
 {
-  // anything to construct?
 }
 
 // ******************************************************************
