@@ -19,13 +19,9 @@
 
 #include "mtmxdbool.h"
 
-MEDDLY::mt_mxd_bool::mt_mxd_bool(domain *d, const policies &p, bool tv)
+MEDDLY::mt_mxd_bool::mt_mxd_bool(domain *d, const policies &p)
 : mtmxd_forest(d, range_type::BOOLEAN, p)
 {
-    terminal t(tv);
-    setTransparentEdge(t.getHandle());
-    // setTransparentEdge(bool_Tencoder::value2handle(tv));
-    initializeStorage();
 }
 
 MEDDLY::mt_mxd_bool::~mt_mxd_bool()
